force-app/main/default/objects/Parts_Used__c/Parts_Used__c.object-meta.xml
<CustomObject>
    <label>Parts Used</label>
    <nameField>
        <displayFormat>PU-{0000000}</displayFormat>
        <label>Parts Used Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>