force-app/main/default/objects/Parts_Used__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <label>Parts</label>
    <referenceTo>Parts_Inventory__c</referenceTo>
    <relationshipLabel>Parts Used</relationshipLabel>
    <relationshipName>Parts_Used</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>