force-app/main/default/objects/Parts_Used__c/fields/Quantity_Used__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Used__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity Used</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>